@@ -1,0 +1,5 @@
+-- Ticket#40425 - Transfer Summary
+
+ALTER TABLE TV_LABCTRL5 ADD SHOW_TRANSFER_SUMMARY VARCHAR(1);
+
+--ALTER TABLE TV_LABCTRL5 DROP COLUMN SHOW_TRANSFER_SUMMARY;
