@@ -1,0 +1,5 @@
+-- Ticket#40425 - Transfer Summary
+
+ALTER TABLE LABCTRL5 ADD "Show Transfer Summary" VARCHAR2(1);
+
+--ALTER TABLE LABCTRL5 DROP COLUMN "Show Transfer Summary";
