@@ -1,7 +1,9 @@
 -- MSQL
 ALTER TABLE TV_LABCTRL5 ADD SHOW_TRANSFER_SUMMARY VARCHAR(1);
 
+--ALTER TABLE TV_LABCTRL5 DROP COLUMN SHOW_TRANSFER_SUMMARY;
+
 -- ORCL
 ALTER TABLE LABCTRL5 ADD "Show Transfer Summary" VARCHAR2(1);
 
-
+--ALTER TABLE LABCTRL5 DROP COLUMN "Show Transfer Summary";
